Try to fix navbar, white background on small screens, dark gray on others.

--- a/app/assets/stylesheets/main-nav.scss
+++ b/app/assets/stylesheets/main-nav.scss
@@ -14,6 +14,10 @@
             clear: both;
         }
 
+        .navbar-nav a {
+            color: $gray-dark;
+        }
+
         .nav-item {
             width: 100%;
             float: none;
@@ -24,6 +28,10 @@
                 border-top: 1px solid $gray-lightest;
             }
         }
+    }
+
+    a {
+      color: white;
     }
 
     .nav-link {
